--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <embed src="/y2mate.com - Contra Music NES  Introduction JP.mp3" loop="true" autostart="true" width="2"
+    <embed src="/resource/y2mate.com - Contra Music NES  Introduction JP.mp3" loop="true" autostart="true" width="2"
          height="0">
     <p class="w1">WELCOME TO </br> MEMORY GAME</p>
     <p class="w2">LETS TEST YOUR MEMORY</p>
